src/styles/main.css
/* ... */
#tht_terrainTypesImport textarea,
#tht_terrainTypesExport textarea {
	height: 100%;
	resize: none;
}

#tht_terrainTypesPresets .preset-list {
	list-style: none;
	margin: 0 40px 8px;
	padding: 0;
	overflow-y: auto;
	max-height: 500px;
}

#tht_terrainTypesPresets .preset-list li {
	display: flex;
	flex-direction: column;
	position: relative;
	padding: 6px;
	margin: 8px;
	min-height: 150px;
	border-radius: 3px;

	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
}

.theme-dark #tht_terrainTypesPresets .preset-list li {
	border: 1px solid var(--color-border-dark-primary);
	box-shadow: 0px 0px 4px -1px rgb(0 0 0 / 50%),
		0px 0px 60px 0px rgb(0 0 0 / 15%) inset;
}

.themed.theme-light #tht_terrainTypesPresets .preset-list li {
	border: 1px solid var(--color-border-light-primary);
	box-shadow: 0px 0px 4px -1px rgb(0 0 0 / 50%),
		0px 0px 60px 0px #FFFFFF inset;
}

#tht_terrainTypesPresets .preset-header {
	margin: -6px;
    padding: 6px;
}

.theme-dark #tht_terrainTypesPresets .preset-header {
	background: rgb(11 10 19 / 62%);
}

.themed.theme-light #tht_terrainTypesPresets .preset-header {
	background: rgb(240 240 240 / 70%);
}

#tht_terrainTypesPresets .preset-name {
	font-size: 1.25rem;
}

#tht_terrainTypesPresets .preset-author {
	opacity: 0.8;
}

#tht_terrainTypesPresets .preset-import-buttons {
	text-align: right;
}

#tht_terrainTypesPresets .preset-import-buttons button {
	display: inline-block;
	width: auto;
}

.themed.theme-light #tht_terrainTypesPresets .preset-import-buttons button {
	background: rgb(230 230 230 / 80%);
}


/* -------------------------- */
/* Line of Sight Ruler Config */
/* -------------------------- */
#tht_lineOfSightRulerConfig .form-group-stacked label {
	margin-bottom: 4px;
}

#tht_lineOfSightRulerConfig .form-group-stacked {
	margin-bottom: 8px;
}


/* -------------------------- */
/* Token Line of Sight Config */
/* -------------------------- */
#tht_tokenLineOfSightConfig .token-selection-container {
	display: flex;
	align-items: center;
	margin-bottom: 6px;
	padding: 2px;
	border-radius: 3px;
}

.theme-dark #tht_tokenLineOfSightConfig .token-selection-container {
	background: var(--color-cool-4);
}

.themed.theme-light #tht_tokenLineOfSightConfig .token-selection-container {
	background: rgb(0 0 0 / 10%);
	border: 1px solid var(--color-dark-6);
}

#tht_tokenLineOfSightConfig .token-selection-container.is-selecting-token {
	border-color: var(--color-warm-2);
}

#tht_tokenLineOfSightConfig .token-selection-container > * {
	margin: 4px;
}

#tht_tokenLineOfSightConfig .token-selection-container .token-image {
	width: 32px;
	height: 32px;
	border: none;
}

#tht_tokenLineOfSightConfig .token-selection-container .token-name {
	flex: 1 1 0;
    white-space: nowrap;
	overflow: hidden;
    text-overflow: ellipsis;
}

#tht_tokenLineOfSightConfig .token-selection-container .token-action {
	font-size: 1.2rem;
}


/* --------------------------- */
/* Terrain Shape Choice Dialog */
/* --------------------------- */
.terrain-shape-choice-dialog .terrain-shape-list {
	display: grid;
	grid-template-columns: repeat(3, 172px);
	gap: 8px;
	margin-bottom: 1rem;
}

.terrain-shape-choice-dialog .terrain-shape-choice-hint-text {
	margin-top: 0 !important;

	/* Max-width of the hint should be equal to the width of the above .terrain-shape list.
	If it is allowed to grow longer then it will stretch the dialog.
	532px = 3 x 172 (three columns) + 2 * 8 (two gaps between columns) */
	max-width: 532px;
}

.terrain-shape-choice-dialog .terrain-shape-list-radio {
	display: none;
}

.terrain-shape-choice-dialog .terrain-shape-list-item {
	width: 172px;
	height: 172px;
	padding: 4px;
	background: var(--color-cool-5-50);
	color: var(--color-light-3);
	border: 1px solid var(--color-light-5);
	border-radius: 4px;
}

.themed.theme-light .terrain-shape-choice-dialog .terrain-shape-list-item {
	background: rgb(0 0 0 / 10%);
	color: var(--color-dark-1);
	border-color: 1px solid var(--color-dark-5);
}

.terrain-shape-choice-dialog .terrain-shape-list-item:hover {
	box-shadow: 0 0 5px var(--color-shadow-primary);
}

.terrain-shape-choice-dialog .terrain-shape-list-radio:checked + .terrain-shape-list-item {
	border-color: var(--color-warm-2);
}

.terrain-shape-choice-dialog .terrain-shape-list-item > p {
	margin: 0 0 4px;
	text-align: center;
}


/* ------- */
/* Utility */
/* ------- */
.align-items-center {
	align-items: center;
}

.gap-05rem {
	gap: 0.5rem;
}

.m-0 {
	margin: 0 !important;
}

.p-0 {
	padding: 0 !important;
}

.p-05rem {
	padding: 0.5rem !important;
}

.text-align-center {
	text-align: center !important;
}

.text-align-right {
	text-align: right !important;
}

.opacity-04 {
	opacity: 0.4 !important;
}

